syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package br.com.zup.grpc;

import "google/protobuf/timestamp.proto";

service CadastraChavePixGRPCService {
  rpc cadastrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service RemoveChavePixGRPCService {
  rpc remover (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service CarregaChavePixGRPCService {
  rpc carregar(CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}
service ListaChavePixGRPCService {
  rpc listar(ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

enum TipoDeChaveGRPC {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}
enum TipoDeContaGRPC {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChaveGRPC tipoChave = 2;
  string valorChave = 3;
  TipoDeContaGRPC tipoConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  bool sucesso = 1;
}


message CarregaChavePixRequest {
  message FiltroPorIdPix {
    string clienteId = 1;
    string pixId = 2;
  }
  oneof filtro {
    FiltroPorIdPix pixId = 1;
    string valorChave = 2;
  }
}

message CarregaChavePixResponse {
  message ChavePix {
    message ContaInfo {
      TipoDeContaGRPC tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }
    TipoDeChaveGRPC tipo = 1;
    string valorChave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadoEm = 4;
  }
  string clienteId = 1;
  string pidId = 2;
  ChavePix chave = 3;
}

message ListaChavePixRequest {
  string clienteId = 1;
}

message ListaChavePixResponse {

  message ChavePix{
    string pixId = 1;
    TipoDeChaveGRPC tipoChave = 2;
    string valorChave = 3;
    TipoDeContaGRPC tipoConta = 4;
    google.protobuf.Timestamp criadoEm = 5;
  }


  string clienteId = 1;
  repeated ChavePix chaves = 2;
}







